--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -288,6 +288,19 @@ Headers:		'Montserrat', sans-serif;
     padding-bottom: 12px;
   }
 }
+.wpp-icon {
+  background-color: #00A884;
+  display: flex;
+  width: 50px;
+  height: 50px;
+  align-items: center;
+  justify-content: center;
+  border-radius: 100%;
+  position: fixed;
+  right: 40px;
+  bottom: 40px;
+  z-index: 9999;
+}
 .hero-section.blog-title {
   height: 400px !important;
 }
